# Solar

./: CMakeLists.txt  README.md
include/: Solar.h
shaders/: orbit.frag  orbit.vert  planet.frag  planet.vert  rings.frag  rings.vert
src/: Solar.cpp  main.cpp
